syntax = "proto3";

package protorune;

message RuneId {
  uint32 height = 1;
  uint32 txindex = 2;
}

message Rune {
  RuneId runeId = 1;
  bytes name = 2;
  uint32 divisibility = 3;
  uint32 spacers = 4;
  uint32 symbol = 5;
}

message BalanceSheetItem {
  Rune rune = 1;
  bytes balance = 2;
}

message BalanceSheet {
  repeated BalanceSheetItem entries = 1;
}

message Outpoint {
  bytes txid = 1;
  uint32 vout = 2;
}

message OutpointWithProtocol {
  bytes txid = 1;
  uint32 vout = 2;
  bytes protocol = 3;
}
message Output {
  bytes script = 1;
  uint64 value = 2;
}

message OutpointResponse {
  BalanceSheet balances = 1;
  Outpoint outpoint = 2;
  Output output = 3;
  uint32 height = 4;
  uint32 txindex = 5;
}

message PaginationInput {
  uint32 start = 1;
  uint32 end = 2;
}

message WalletRequest {
  bytes wallet = 1;
}

message WalletResponse {
  repeated OutpointResponse outpoints = 1;
  BalanceSheet balances = 2;
}

message ProtorunesWalletRequest {
  bytes wallet = 1;
  bytes protocol_tag = 2;
}

message RunesResponse {
  repeated Rune runes = 1;
}
message ProtoBurn {
  bytes protocol_tag = 1;
  uint32 pointer = 2;
}

message uint128 {
  uint64 lo = 1;
  uint64 hi = 2;
}

message Clause {
  RuneId rune = 1;
  uint128 amount = 2;
}

message Predicate {
  repeated Clause clauses = 1;
}

message ProtoMessage {
  bytes calldata = 1;
  Predicate predicate = 2;
  uint32 pointer = 3;
  uint32 refund_pointer = 4;
}

message RuntimeInput {
  bytes protocol_tag = 1;
}

message Runtime {
  BalanceSheet balances = 1;
}
